--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,18 +6,18 @@ repo_name: bsmeding/bsmeding.github.io
 plugins:
   - blog:
       # blog_dir: blog
-      # post_url_format: "{slug}"
-      # blog_toc: true
-      # categories_toc: false
+      post_url_format: "{slug}"
+      blog_toc: true
+      categories_toc: false
       # archive_name: "Blogs"
-      # pagination_per_page: 4
-  - rss:
-      match_path: blog/posts/.* 
-      date_from_meta:
-        as_creation: date
-      categories:
-        - categories
-        - tags 
+      pagination_per_page: 4
+  # - rss:
+  #     match_path: blog/posts/.* 
+  #     date_from_meta:
+  #       as_creation: date
+  #     categories:
+  #       - categories
+  #       - tags 
   - search:
       lang: en
   - tags:
@@ -29,7 +29,7 @@ nav:
     - blog/index.md  
   - Tutorials:
     - 'Tutorials': tutorials.md
-    - 'Tutorials 2': tutorials2.md
+    - 'Ansible NAPALM': tutorials/ansible_cisco_napalm_diff.md
   - Courses:
     - 'Courses': courses.md
     - 'Courses 2': courses2.md
