--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,8 +37,21 @@ nav:
 theme:
   name: material
   palette:
-    primary: blue
-    accent: light blue
+    # Palette toggle for light mode
+    - scheme: default
+      primary: gray
+      accent: blue
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      primary: black
+      accent: amber
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode    
   font:
     text: 'Roboto'
     code: 'Roboto Mono'
