add colors - auto switch

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,21 +37,30 @@ nav:
 theme:
   name: material
   palette:
-    # Palette toggle for light mode
-    - scheme: default
-      primary: gray
-      accent: blue
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
       toggle:
-        icon: material/brightness-7 
+        icon: material/brightness-auto
+        name: Switch to light mode
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default # (1)!
+      primary: gray
+      accent: blue      
+      toggle:
+        icon: material/brightness-7
         name: Switch to dark mode
 
     # Palette toggle for dark mode
-    - scheme: slate
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
       primary: black
-      accent: amber
+      accent: amber      
       toggle:
         icon: material/brightness-4
-        name: Switch to light mode    
+        name: Switch to system preference
+
   font:
     text: 'Roboto'
     code: 'Roboto Mono'
