--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           python-version: 3.x
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - run: echo "netdevops.it" > ./build/CNAME"
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
