add custom domain to CACHE

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -19,7 +19,6 @@ jobs:
         with:
           python-version: 3.x
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
-      - run: echo "netdevops.it" >> ./build/CNAME
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
@@ -27,4 +26,4 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material mkdocs-rss-plugin 
-      - run: mkdocs gh-deploy --force
+      - run: echo 'netdevops.it' > ./build/CNAME && mkdocs gh-deploy --force
