--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -26,4 +26,4 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material mkdocs-rss-plugin 
-      - run: echo 'netdevops.it' > ./build/CNAME && mkdocs gh-deploy --force
+      - run: mkdocs gh-deploy --force
