--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
     - 'Tutorials': tutorials.md
     - 'Ansible NAPALM': tutorials/ansible_cisco_napalm_diff.md
     - 'Git basics': tutorials/git_basics.md
+    - 'Linux basics': tutorials/linux_basics.md
   - Courses:
     - 'Courses': courses.md
     - 'Courses Dutch': courses_NL.md
