--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,6 +97,13 @@ extra:
       link: https://www.linkedin.com/in/bartsmeding/
     # - icon: fontawesome/brands/twitter
     #   link: https://twitter.com/bsmeding
+  consent:
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.    
   analytics:
     provider: google
     property: G-LF84C44PGC
