--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,7 +103,10 @@ extra:
       We use cookies to recognize your repeated visits and preferences, as well
       as to measure the effectiveness of our documentation and whether users
       find what they're searching for. With your consent, you're helping us to
-      make our documentation better.    
+      make our documentation better.
+    actions:
+      - accept
+      - manage       
   analytics:
     provider: google
     property: G-LF84C44PGC
