feat: add markdown syntact higlighter

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,3 +110,11 @@ extra:
   analytics:
     provider: google
     property: G-LF84C44PGC
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
