--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,12 +23,29 @@ plugins:
 nav:
   - Home: index.md
   - NetDevOps: netdevops.md
+  - Ansible:
+    - 'ansible role and collection index': ansible_roles_and_collections.md
+    - 'role: Docker': ansible/ansible_role_docker.md
+    - 'bsmeding.docker': ansible/ansible_role_docker.md
+    - 'bsmeding.nginx_docker': ansible/ansible_role_nginx_docker.md
+    - 'bsmeding.gitlab_docker': ansible/ansible_role_gitlab_docker.md
+  - Docker:
+    - 'Docker images index': docker_images.md
+  - AI:
+    - 'AI in networking': ai_in_networking.md
+  - Blog:
+    - blog/index.md  
   - Tutorials:
-      - tutorials.md
-      - tutorials/
-  - Blog: blog/index.md
-  - Courses: courses.md
+    - 'Tutorials': tutorials.md
+    - 'Ansible NAPALM': tutorials/ansible_cisco_napalm_diff.md
+    - 'Git basics': tutorials/git_basics.md
+    - 'Linux basics': tutorials/linux_basics.md
+    - 'Enable Winwows Subsystem for Linux': tutorials/enable_wsl_on_windows.md
+  - Courses:
+    - 'Courses': courses.md
+    - 'Courses Dutch': courses_NL.md
   - About: about.md
+  - Contact: contact.md
 
 theme:
   name: material
