add vagrant install

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ nav:
     - 'Git basics': tutorials/git_basics.md
     - 'Linux basics': tutorials/linux_basics.md
     - 'Enable Winwows Subsystem for Linux': tutorials/enable_wsl_on_windows.md
+    - 'Vagrant Installation': tutorials/vagrant_install.md
   - Courses:
     - 'Courses': courses.md
     - 'Courses Dutch': courses_NL.md
