vacation time to update and streamline the blog posts

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ nav:
   - Docker:
     - 'Docker images index': docker_images.md
   - AI:
-    - 'AI in networking': ai_in_networking.md
+    - 'AI in networking': ai/ai_in_networking.md
   - Blog:
     - blog/index.md  
   - Tutorials:
