--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,9 @@ nav:
     - blog/index.md  
   - Tutorials:
     - 'Tutorials': tutorials.md
+    - 'Ansible Tutorial 1: Concepts & Terminology': tutorials/ansible_tutorial_1_concepts.md
+    - 'Ansible Tutorial 2: Modules & Your First Playbook': tutorials/ansible_tutorial_2_modules.md
+    - 'Ansible Tutorial 3: Variables, Modules & Network Fact Gathering': tutorials/ansible_tutorial_3_variables_facts.md
     - 'Ansible NAPALM': tutorials/ansible_cisco_napalm_diff.md
     - 'Git basics': tutorials/git_basics.md
     - 'Linux basics': tutorials/linux_basics.md
