--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,6 @@ plugins:
 
 nav:
   - Home: index.md
-  - NetDevOps: netdevops.md
   - Ansible:
     - 'ansible role and collection index': ansible_roles_and_collections.md
     - 'bsmeding.docker': ansible/ansible_role_docker.md
@@ -31,7 +30,11 @@ nav:
     - 'bsmeding.nginx_docker': ansible/ansible_role_nginx_docker.md
     - 'bsmeding.gitlab_ce_docker': ansible/ansible_role_gitlab_docker.md
     - 'bsmeding.swag_docker': ansible/ansible_role_swag_docker.md
-
+  - Nautobot:
+    - 'Nautobot SSoT': nautobot_ssot.md
+    - 'Nautobot Docker Apps': blog/posts/2025/2025-04-10-nautobot-docker-apps.md
+    # - 'Nautobot Jobs': nautobot_jobs.md
+    # - 'Nautobot Plugins': nautobot_plugins.md
   - Docker:
     - 'Docker images index': docker_images.md
   - AI:
