--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,24 +54,24 @@ nav:
     - 'SSO: Introduction': sso.md
   - Tools:
     - Tools Index: tools.md
-    - Ansible: blog/posts/tools/ansible.md
-    - Docker: blog/posts/tools/docker.md
-    - NetBox: blog/posts/tools/netbox.md
-    - Nautobot: blog/posts/tools/nautobot.md
-    - OpsMill: blog/posts/tools/opsmill.md
-    - Jinja2: blog/posts/tools/jinja2.md
-    - Nornir: blog/posts/tools/nornir.md
-    - Terraform: blog/posts/tools/terraform.md
-    - SaltStack: blog/posts/tools/saltstack.md
-    - pyATS: blog/posts/tools/pyats.md
-    - Prometheus: blog/posts/tools/prometheus.md
-    - Grafana: blog/posts/tools/grafana.md
-    - InfluxDB: blog/posts/tools/influxdb.md
-    - Jenkins: blog/posts/tools/jenkins.md
-    - GitLab CI/CD: blog/posts/tools/gitlab-ci.md
-    - GitHub Actions: blog/posts/tools/github-actions.md
-    - CloudFormation: blog/posts/tools/cloudformation.md
-    - API: blog/posts/tools/api.md
+    - Ansible: blog/ansible-introduction-getting-started/
+    - Docker: blog/docker/
+    - NetBox: blog/netbox/
+    - Nautobot: blog/nautobot/
+    - OpsMill: blog/opsmill/
+    - Jinja2: blog/jinja2/
+    - Nornir: blog/nornir-introduction-getting-started/
+    - Terraform: blog/terraform-introduction-getting-started/
+    - SaltStack: blog/saltstack-introduction-getting-started/
+    - pyATS: blog/pyats-introduction-getting-started/
+    - Prometheus: blog/prometheus-introduction-getting-started/
+    - Grafana: blog/grafana-introduction-getting-started/
+    - InfluxDB: blog/influxdb-introduction-getting-started/
+    - Jenkins: blog/jenkins-introduction-getting-started/
+    - GitLab CI/CD: blog/gitlab-ci-cd-introduction-getting-started/
+    - GitHub Actions: blog/github-actions-introduction-getting-started/
+    - CloudFormation: blog/aws-cloudformation-introduction-getting-started/
+    - API: blog/apis-in-network-automation/
   - YAML Validator: yaml-validator.md
   - Courses:
     - 'Courses': courses.md
