--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ plugins:
 nav:
   - Home: index.md
   - Ansible:
-    - 'ansible role and collection index': ansible_roles_and_collections.md
+    - 'Ansible Roles & Collections': ansible_roles_and_collections.md
     - 'bsmeding.docker': ansible/ansible_role_docker.md
     - 'bsmeding.nautobot_docker': ansible/ansible_role_nautobot_docker.md
     - 'bsmeding.awx_docker': ansible/ansible_role_awx_docker.md
@@ -42,36 +42,36 @@ nav:
   - Blog:
     - blog/index.md  
   - Tutorials:
-    - 'Tutorials': tutorials.md
+    - 'Tutorials Overview': tutorials.md
     - 'Ansible Tutorial 1: Concepts & Terminology': tutorials/ansible_tutorial_1_concepts.md
     - 'Ansible Tutorial 2: Modules & Your First Playbook': tutorials/ansible_tutorial_2_modules.md
     - 'Ansible Tutorial 3: Variables, Modules & Network Fact Gathering': tutorials/ansible_tutorial_3_variables_facts.md
     - 'Ansible NAPALM': tutorials/ansible_cisco_napalm_diff.md
     - 'Git basics': tutorials/git_basics.md
     - 'Linux basics': tutorials/linux_basics.md
-    - 'Enable Winwows Subsystem for Linux': tutorials/enable_wsl_on_windows.md
+    - 'Enable Windows Subsystem for Linux': tutorials/enable_wsl_on_windows.md
     - 'Vagrant Installation': tutorials/vagrant_install.md
     - 'SSO: Introduction': sso.md
   - Tools:
-    - Tools Index: tools.md
-    - Ansible: blog/ansible-introduction--getting-started.html
-    - Docker: blog/docker.html
-    - NetBox: blog/netbox.html
-    - Nautobot: blog/nautobot.html
-    - OpsMill: blog/opsmill.html
-    - Jinja2: blog/jinja2.html
-    - Nornir: blog/nornir-introduction--getting-started.html
-    - Terraform: blog/terraform-introduction--getting-started.html
-    - SaltStack: blog/saltstack-introduction--getting-started.html
-    - pyATS: blog/pyats-introduction--getting-started.html
-    - Prometheus: blog/prometheus-introduction--getting-started.html
-    - Grafana: blog/grafana-introduction--getting-started.html
-    - InfluxDB: blog/influxdb-introduction--getting-started.html
-    - Jenkins: blog/jenkins-introduction--getting-started.html
-    - GitLab CI/CD: blog/gitlab-ci-cd-introduction--getting-started.html
-    - GitHub Actions: blog/github-actions-introduction--getting-started.html
-    - CloudFormation: blog/aws-cloudformation-introduction--getting-started.html
-    - API: blog/apis-in-network-automation.html
+    - 'Tools Index': tools.md
+    - 'Ansible': blog/ansible-introduction--getting-started.html
+    - 'Docker': blog/docker.html
+    - 'NetBox': blog/netbox.html
+    - 'Nautobot': blog/nautobot.html
+    - 'OpsMill': blog/opsmill.html
+    - 'Jinja2': blog/jinja2.html
+    - 'Nornir': blog/nornir-introduction--getting-started.html
+    - 'Terraform': blog/terraform-introduction--getting-started.html
+    - 'SaltStack': blog/saltstack-introduction--getting-started.html
+    - 'pyATS': blog/pyats-introduction--getting-started.html
+    - 'Prometheus': blog/prometheus-introduction--getting-started.html
+    - 'Grafana': blog/grafana-introduction--getting-started.html
+    - 'InfluxDB': blog/influxdb-introduction--getting-started.html
+    - 'Jenkins': blog/jenkins-introduction--getting-started.html
+    - 'GitLab CI/CD': blog/gitlab-ci-cd-introduction--getting-started.html
+    - 'GitHub Actions': blog/github-actions-introduction--getting-started.html
+    - 'CloudFormation': blog/aws-cloudformation-introduction--getting-started.html
+    - 'API': blog/apis-in-network-automation.html
   - YAML Validator: yaml-validator.md
   - Courses:
     - 'Courses': courses.md
@@ -102,6 +102,7 @@ theme:
     - navigation.expand
     - navigation.sections
     - navigation.indexes
+    - navigation.prune
     - content.code.copy
     - content.tabs.link
     - search.share
