--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -135,4 +135,5 @@ extra_javascript:
 
 extra_css:
   - https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css
+  - css/full-width.css
 
