adding older revined posts and logos

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,24 +54,27 @@ nav:
     - 'SSO: Introduction': sso.md
   - Tools:
     - 'Tools Index': tools.md
+    - 'API': blog/posts/tools/api.md
     - 'Ansible': blog/posts/tools/ansible.md
+    - 'CloudFormation': blog/posts/tools/cloudformation.md
+    - 'ContainerLab': blog/posts/tools/containerlab.md
     - 'Docker': blog/posts/tools/docker.md
-    - 'NetBox': blog/posts/tools/netbox.md
-    - 'Nautobot': blog/posts/tools/nautobot.md
-    - 'OpsMill': blog/posts/tools/opsmill.md
-    - 'Jinja2': blog/posts/tools/jinja2.md
-    - 'Nornir': blog/posts/tools/nornir.md
-    - 'Terraform': blog/posts/tools/terraform.md
-    - 'SaltStack': blog/posts/tools/saltstack.md
-    - 'pyATS': blog/posts/tools/pyats.md
-    - 'Prometheus': blog/posts/tools/prometheus.md
+    - 'GitHub Actions': blog/posts/tools/github-actions.md
+    - 'GitLab CI/CD': blog/posts/tools/gitlab-ci.md
     - 'Grafana': blog/posts/tools/grafana.md
     - 'InfluxDB': blog/posts/tools/influxdb.md
     - 'Jenkins': blog/posts/tools/jenkins.md
-    - 'GitLab CI/CD': blog/posts/tools/gitlab-ci.md
-    - 'GitHub Actions': blog/posts/tools/github-actions.md
-    - 'CloudFormation': blog/posts/tools/cloudformation.md
-    - 'API': blog/posts/tools/api.md
+    - 'Jinja2': blog/posts/tools/jinja2.md
+    - 'Nautobot': blog/posts/tools/nautobot.md
+    - 'NetBox': blog/posts/tools/netbox.md
+    - 'NetPicker.io': blog/posts/tools/netpicker.md
+    - 'Nornir': blog/posts/tools/nornir.md
+    - 'OpsMill': blog/posts/tools/opsmill.md
+    - 'Prometheus': blog/posts/tools/prometheus.md
+    - 'pyATS': blog/posts/tools/pyats.md
+    - 'SaltStack': blog/posts/tools/saltstack.md
+    - 'SlurpIT.io': blog/posts/tools/slurpit.md
+    - 'Terraform': blog/posts/tools/terraform.md
   - Web Tools:
     - 'Web Tools Overview': online-dev-tools/index.md
     - 'YAML Validator': online-dev-tools/yaml-validator.md
