--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ plugins:
       post_url_format: "{slug}"
       blog_toc: true
       pagination_per_page: 4
+      future: false             # Disable future posts
   - tags:
       tags_file: tags.md
   - search:
