--- a/.github/workflows/bluesky-auto-post.yml
+++ b/.github/workflows/bluesky-auto-post.yml
@@ -5,6 +5,12 @@ on:
     # Run every 6 hours to check for new posts
     - cron: '0 */6 * * *'
   workflow_dispatch: # Allow manual triggering
+  push:
+    branches: [ main ]
+    paths:
+      - 'docs/blog/posts/**/*.md'
+      - '.github/workflows/bluesky-auto-post.yml'
+      - '.github/scripts/bluesky_auto_post.py'
 
 jobs:
   check-and-post:
