--- a/.github/workflows/bluesky-auto-post.yml
+++ b/.github/workflows/bluesky-auto-post.yml
@@ -1,16 +1,17 @@
 name: Auto-post to Bluesky
 
 on:
-  schedule:
-    # Run every 6 hours to check for new posts
-    - cron: '0 */6 * * *'
-  workflow_dispatch: # Allow manual triggering
-  push:
-    branches: [ main ]
-    paths:
-      - 'docs/blog/posts/**/*.md'
-      - '.github/workflows/bluesky-auto-post.yml'
-      - '.github/scripts/bluesky_auto_post.py'
+  # DISABLED - Workflow disabled due to duplicate posting issues
+  # schedule:
+  #   # Run every 6 hours to check for new posts
+  #   - cron: '0 */6 * * *'
+  # push:
+  #   branches: [ main ]
+  #   paths:
+  #     - 'docs/blog/posts/**/*.md'
+  #     - '.github/workflows/bluesky-auto-post.yml'
+  #     - '.github/scripts/bluesky_auto_post.py'
+  workflow_dispatch: # Only manual triggering allowed - workflow disabled for auto-posting
 
 jobs:
   check-and-post:
