--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,8 +144,11 @@ extra_javascript:
   - js/giscus.js
   - https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js
   - js/cookieconsent-init.js
+  - js/wheel.js
 
 extra_css:
   - https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css
+  - https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js
+  - https://cdn.jsdelivr.net/gh/zarocknz/javascript-winwheel@2.7.0/Winwheel.min.js
   - css/full-width.css
-
+  - css/rat.css
