--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,6 +85,7 @@ nav:
     - 'URL Encoder/Decoder': online-dev-tools/url-encoder.md
     - 'Hash Generator': online-dev-tools/hash-generator.md
     - 'Color Converter': online-dev-tools/color-converter.md
+    - 'Rat of Fortune': wheel.md
   - Courses:
     - 'Courses': courses.md
     - 'Courses Dutch': courses_NL.md
