--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,10 @@ nav:
     - 'Nautobot the ultimate network CMDB': nautobot_the_ultimate_network_cmdb.md
     - 'Nautobot Docker Apps': blog/posts/2025/2025-04-10-nautobot-docker-apps.md
     - 'Import Device Types into Nautobot': blog/posts/2025/2025-09-16-import-device-types-into-nautobot.md
+    - 'Nautobot Zero to Hero':
+      - 'Part 1: Install Nautobot': tutorials/nautobot_zero_to_hero/01_nautobot-zero-to-hero-part1.md
+      - 'Part 2: Getting Started with Nautobot': tutorials/nautobot_zero_to_hero/02_nautobot-zero-to-hero-part2.md
+      - 'Part 3: Deploy Network with Containerlab': tutorials/nautobot_zero_to_hero/03_nautobot-zero-to-hero-part3.md
     # - 'Nautobot Jobs': nautobot_jobs.md
     # - 'Nautobot Plugins': nautobot_plugins.md
   - Docker:
