--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,7 @@ nav:
     - 'Import Device Types into Nautobot': blog/posts/2025/2025-09-16-import-device-types-into-nautobot.md
     - 'Nautobot Zero to Hero':
       - 'Overview': tutorials/nautobot_zero_to_hero/00_nautobot-zero-to-hero-landings-page.md
-      - 'Part 1: Install Nautobot': tutorials/nautobot_zero_to_hero/01_nautobot-zero-to-hero-part1.md
+      - 'Part 1: Install Nautobot in 5 minutes': tutorials/nautobot_zero_to_hero/01_nautobot-zero-to-hero-part1.md
       - 'Part 2: Getting Started with Nautobot': tutorials/nautobot_zero_to_hero/02_nautobot-zero-to-hero-part2.md
       - 'Part 3: Deploy Network with Containerlab': tutorials/nautobot_zero_to_hero/03_nautobot-zero-to-hero-part3.md
     # - 'Nautobot Jobs': nautobot_jobs.md
